@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-30T08:21:14Z",
+  "timestamp" : "2022-08-30T16:23:40Z",
   "count_outdated" : 695,
   "uniques_outdated" : 255,
-  "count" : 709,
-  "uniques" : 263,
+  "count" : 710,
+  "uniques" : 264,
   "views" : [
     {
       "timestamp": "2022-08-17T00:00:00Z",
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
