@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 8,
+  "count": 15,
+  "uniques": 9,
   "views": [
     {
       "timestamp": "2022-08-17T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
