@@ -1,3 +1,11 @@
+2022-08-30T16:23:40Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2957890792
+* notice: last 14d: unq all: 9 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 255 695 / 263 709
+* notice: next accum: outdated-unq outdated-all / unq all: 255 695 / 264 710
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-08-30]
+
 2022-08-30T08:21:14Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2954657808
 * notice: last 14d: unq all: 8 14
